// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render with: heading1 1`] = `
<ForwardRef
  type="heading1"
>
  <h1>
    My content for
    heading1
  </h1>
</ForwardRef>
`;

exports[`<Title /> should render with: heading2 1`] = `
<ForwardRef
  type="heading2"
>
  <h2>
    My content for
    heading2
  </h2>
</ForwardRef>
`;

exports[`<Title /> should render with: heading3 1`] = `
<ForwardRef
  type="heading3"
>
  <h3>
    My content for
    heading3
  </h3>
</ForwardRef>
`;

exports[`<Title /> with no type 1`] = `
<ForwardRef>
  <h1>
    My content for no title
  </h1>
</ForwardRef>
`;
